ポートフォリオサイトの編集

--- a/index.html
+++ b/index.html
@@ -2,13 +2,39 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Kaushan+Script"
+      rel="stylesheet"
+    />
     <title>My Portfolio</title>
   </head>
   <body>
+    <h1>About Me</h1>
+    <div class="container">
+      <div class="mephoto">
+        <img src="myphoto.png" alt="私の写真" class="me" />
+      </div>
+      <div class="item">
+        <div class="profContainer">
+          <h2>Profile</h2>
+          <div>
+            <h3>氏名：中村 悠希</h3>
+            <h3>出身：山口県</h3>
+            <h3>誕生日：1999年11月19日</h3>
+            <h3>大学：東京工業大学大学院</h3>
+            <h3>部活：写真部</h3>
+            <h3>趣味：写真，旅行，映画，食べ歩き，音楽</h3>
+          </div>
+          <img src="photo1.jpg" alt="1枚目の写真" id="mypic" class="photo1" />
+        </div>
+      </div>
+    </div>
+    <footer>©︎ Yuki.N</footer>
     <script src="main.js"></script>
   </body>
 </html>
